Basic for editing sync settings

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "esbuild": "^0.19.2",
+    "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
