--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "esbuild ./src/client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js --watch"
+    "dev": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js --watch"
   },
   "author": "",
   "license": "ISC",
