--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js --watch"
+    "dev": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js --watch",
+    "build": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js"
   },
   "author": "",
   "license": "ISC",
