--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js --watch",
-    "build": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js"
+    "dev": "concurrently \"npm run dev:styles\" \"npm run dev:client\"",
+    "dev:styles": "npx tailwindcss -i client/index.css  -o static/index.css --watch",
+    "dev:client": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js --watch",
+    "build": "npm run build:styles && npm run build:client",
+    "build:styles": "npx tailwindcss -i client/index.css  -o static/index.css",
+    "build:client": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +19,9 @@
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.1",
+    "tailwindcss": "^3.3.3"
   }
 }
