--- a/settings.json
+++ b/settings.json
@@ -4,6 +4,6 @@
     "stripe_fee_account_id": "101",
     "stripe_vendor_id": "68",
     "default_income_account_id": "65",
-    "default_tax_code_id": "5",
+    "default_tax_code_id": "",
     "exempt_tax_code_id": "2"
 }
