Add menu to ConnectionCards

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "esbuild": "^0.19.2",
     "formik": "^2.4.3",
     "react": "^18.2.0",
