--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^1.9.5",
     "esbuild": "^0.19.2",
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3"
   }
 }
