--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "qbo-importer",
-  "version": "1.0.0",
-  "description": "**Quickly sync your Stripe transactions with Quick Books Online.**",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run dev:styles\" \"npm run dev:client\"",
-    "dev:styles": "npx tailwindcss -i client/index.css  -o static/index.css --watch",
-    "dev:client": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js --watch",
-    "build": "npm run build:styles && npm run build:client",
-    "build:styles": "npx tailwindcss -i client/index.css  -o static/index.css",
-    "build:client": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@reduxjs/toolkit": "^1.9.5",
-    "esbuild": "^0.19.2",
-    "formik": "^2.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "yup": "^1.2.0"
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.1",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.3"
-  }
+    "name": "qbo-importer",
+    "version": "1.0.0",
+    "description": "**Quickly sync your Stripe transactions with Quick Books Online.**",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "concurrently \"npm run dev:styles\" \"npm run dev:client\"",
+        "dev:styles": "npx tailwindcss -i client/index.css  -o static/index.css --watch",
+        "dev:client": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js --watch",
+        "build": "npm run build:styles && npm run build:client",
+        "build:styles": "npx tailwindcss -i client/index.css  -o static/index.css",
+        "build:client": "esbuild ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@headlessui/react": "^1.7.17",
+        "@heroicons/react": "^2.0.18",
+        "@reduxjs/toolkit": "^1.9.5",
+        "esbuild": "^0.19.2",
+        "formik": "^2.4.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.1.2",
+        "yup": "^1.2.0"
+    },
+    "devDependencies": {
+        "concurrently": "^8.2.1",
+        "eslint": "^8.48.0",
+        "eslint-config-prettier": "^9.0.0",
+        "prettier": "^3.0.3",
+        "tailwindcss": "^3.3.3"
+    }
 }
