--- a/requirements.txt
+++ b/requirements.txt
@@ -2,26 +2,34 @@ annotated-types==0.5.0
 anyio==3.7.1
 black==23.7.0
 certifi==2023.7.22
+cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.6
+distlib==0.3.7
 ecdsa==0.18.0
 enum-compat==0.0.3
 fastapi==0.101.1
+filelock==3.12.3
 future==0.18.3
 h11==0.14.0
+identify==2.5.27
 idna==3.4
 intuit-oauth==1.2.4
+itsdangerous==2.1.2
 mypy-extensions==1.0.0
+nodeenv==1.8.0
 oauthlib==3.2.2
 packaging==23.1
 pathspec==0.11.2
 platformdirs==3.10.0
+pre-commit==3.3.3
 pyasn1==0.5.0
 pydantic==2.2.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.0
 python-dotenv==1.0.0
 python-jose==3.3.0
+PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -32,3 +40,5 @@ stripe==5.5.0
 typing_extensions==4.7.1
 urllib3==2.0.4
 uvicorn==0.23.2
+virtualenv==20.24.3
+websockets==11.0.3
