--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.0.18",
         "@reduxjs/toolkit": "^1.9.5",
-        "esbuild": "^0.19.2",
         "formik": "^2.4.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -26,10 +25,14 @@
         "yup": "^1.2.0"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.5.0",
+        "@typescript-eslint/parser": "^6.5.0",
         "concurrently": "^8.2.1",
+        "esbuild": "^0.19.2",
         "eslint": "^8.48.0",
         "eslint-config-prettier": "^9.0.0",
         "prettier": "^3.0.3",
-        "tailwindcss": "^3.3.3"
+        "tailwindcss": "^3.3.3",
+        "typescript": "^5.2.2"
     }
 }
