--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,13 @@ enum-compat==0.0.3
 fastapi==0.101.1
 filelock==3.12.3
 future==0.18.3
+greenlet==2.0.2
 h11==0.14.0
 identify==2.5.27
 idna==3.4
 intuit-oauth==1.2.4
 itsdangerous==2.1.2
+mypy==1.5.1
 mypy-extensions==1.0.0
 nodeenv==1.8.0
 oauthlib==3.2.2
@@ -35,8 +37,11 @@ requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.20
 starlette==0.27.0
 stripe==5.5.0
+types-requests==2.31.0.2
+types-urllib3==1.26.25.14
 typing_extensions==4.7.1
 urllib3==2.0.4
 uvicorn==0.23.2
