--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ greenlet==2.0.2
 h11==0.14.0
 identify==2.5.27
 idna==3.4
+iniconfig==2.0.0
 intuit-oauth==1.2.4
 itsdangerous==2.1.2
 mypy==1.5.1
@@ -24,11 +25,13 @@ oauthlib==3.2.2
 packaging==23.1
 pathspec==0.11.2
 platformdirs==3.10.0
+pluggy==1.3.0
 pre-commit==3.3.3
 pyasn1==0.5.0
 pydantic==2.2.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.0
+pytest==7.4.0
 python-dotenv==1.0.0
 python-jose==3.3.0
 PyYAML==6.0.1
