--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ ecdsa==0.18.0
 enum-compat==0.0.3
 fastapi==0.101.1
 filelock==3.12.3
+flake8==6.1.0
 future==0.18.3
 greenlet==2.0.2
 h11==0.14.0
@@ -18,6 +19,7 @@ idna==3.4
 iniconfig==2.0.0
 intuit-oauth==1.2.4
 itsdangerous==2.1.2
+mccabe==0.7.0
 mypy==1.5.1
 mypy-extensions==1.0.0
 nodeenv==1.8.0
@@ -28,9 +30,11 @@ platformdirs==3.10.0
 pluggy==1.3.0
 pre-commit==3.3.3
 pyasn1==0.5.0
+pycodestyle==2.11.0
 pydantic==2.2.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.0
+pyflakes==3.1.0
 pytest==7.4.0
 python-dotenv==1.0.0
 python-jose==3.3.0
@@ -43,7 +47,13 @@ sniffio==1.3.0
 SQLAlchemy==2.0.20
 starlette==0.27.0
 stripe==5.5.0
+types-colorama==0.4.15.12
+types-docutils==0.20.0.3
+types-Pygments==2.16.0.0
 types-requests==2.31.0.2
+types-setuptools==68.1.0.1
+types-stripe==3.5.2.14
+types-ujson==5.8.0.1
 types-urllib3==1.26.25.14
 typing_extensions==4.7.1
 urllib3==2.0.4
