eslint config and gitignore

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,6 @@
     ],
     "root": true,
     "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"]
+    "plugins": ["@typescript-eslint"],
+    "ignorePatterns": ["node_modules/", "static/"]
 }
