--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,33 +1,32 @@
 name: Python linter
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    push:
+        branches: ['main']
+    pull_request:
+        branches: ['main']
 
 permissions:
-  contents: read
+    contents: read
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.11.4
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.11.4"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 black mypy
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Flake8
-      run: python -m flake8 .
-    - name: Black
-      run: python -m black .
-    - name: mypy
-      run: python -m mypy .
+        steps:
+            - uses: actions/checkout@v3
+            - name: Set up Python 3.11.4
+              uses: actions/setup-python@v3
+              with:
+                  python-version: '3.11.4'
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install flake8 black mypy
+                  if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+            - name: Flake8
+              run: python -m flake8 .
+            - name: Black
+              run: python -m black .
+            - name: mypy
+              run: python -m mypy .
