--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ flake8==6.1.0
 future==0.18.3
 greenlet==2.0.2
 h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
 identify==2.5.27
 idna==3.4
 iniconfig==2.0.0
