--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,4 +1,4 @@
-name: Python linter
+name: Python tests
 
 on:
     push:
@@ -33,5 +33,5 @@ jobs:
                   QBO_CLIENT_SECRET: ${{ secrets.QBO_CLIENT_SECRET }}
                   STRIPE_CLIENT_ID: ${{ secrets.STRIPE_CLIENT_ID }}
                   TEST_STRIPE_ACCOUNT_ID: ${{ secrets.TEST_STRIPE_ACCOUNT_ID }}
-                  TEST_STRIPE_API_KEY: ${{ secrets.TEST_STRIPE_SECRET_KEY }}
+                  TEST_STRIPE_API_KEY: ${{ secrets.TEST_STRIPE_API_KEY }}
               run: pytest
