--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.2",
+        "react-router": "^6.15.0",
+        "react-router-dom": "^6.15.0",
         "yup": "^1.2.0"
     },
     "devDependencies": {
