--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pathspec==0.11.2
 platformdirs==3.10.0
 pluggy==1.3.0
 pre-commit==3.3.3
+psycopg2-binary==2.9.7
 pyasn1==0.5.0
 pycodestyle==2.11.0
 pydantic==2.2.0
