--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.12.0
 annotated-types==0.5.0
 anyio==3.7.1
 black==23.7.0
@@ -21,6 +22,8 @@ idna==3.4
 iniconfig==2.0.0
 intuit-oauth==1.2.4
 itsdangerous==2.1.2
+Mako==1.2.4
+MarkupSafe==2.1.3
 mccabe==0.7.0
 mypy==1.5.1
 mypy-extensions==1.0.0
