--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.0.18",
+        "@mui/x-data-grid": "^6.13.0",
         "@reduxjs/toolkit": "^1.9.5",
         "formik": "^2.4.3",
         "react": "^18.2.0",
