--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
+alembic==1.12.0
 annotated-types==0.5.0
 anyio==3.7.1
-APScheduler==3.10.1
-asgiref==3.5.2
-astroid==2.13.2
 black==23.7.0
 certifi==2023.7.22
 cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.6
-colorama==0.4.6
-dill==0.3.6
 distlib==0.3.7
 ecdsa==0.18.0
 enum-compat==0.0.3
@@ -18,7 +14,6 @@ filelock==3.12.3
 flake8==6.1.0
 future==0.18.3
 greenlet==2.0.2
-gunicorn==20.1.0
 h11==0.14.0
 httpcore==0.17.3
 httpx==0.24.1
@@ -26,9 +21,9 @@ identify==2.5.27
 idna==3.4
 iniconfig==2.0.0
 intuit-oauth==1.2.4
-isort==5.11.4
 itsdangerous==2.1.2
-lazy-object-proxy==1.9.0
+Mako==1.2.4
+MarkupSafe==2.1.3
 mccabe==0.7.0
 mypy==1.5.1
 mypy-extensions==1.0.0
@@ -36,39 +31,28 @@ nodeenv==1.8.0
 oauthlib==3.2.2
 packaging==23.1
 pathspec==0.11.2
-Pillow==9.5.0
 platformdirs==3.10.0
 pluggy==1.3.0
 pre-commit==3.3.3
-psycopg2-binary==2.9.5
-psycopg2-pool==1.1
+psycopg2-binary==2.9.7
 pyasn1==0.5.0
 pycodestyle==2.11.0
 pydantic==2.2.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.0
 pyflakes==3.1.0
-PyJWT==2.5.0
-pylint==2.15.10
 pytest==7.4.0
-pytest-asyncio==0.21.1
 python-dotenv==1.0.0
 python-jose==3.3.0
-pytz==2022.2.1
-pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
-schedule==1.1.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.20
-sqlparse==0.4.2
 starlette==0.27.0
 stripe==5.5.0
-tomlkit==0.11.6
-twilio==7.16.4
 types-colorama==0.4.15.12
 types-docutils==0.20.0.3
 types-Pygments==2.16.0.0
@@ -78,12 +62,7 @@ types-stripe==3.5.2.14
 types-ujson==5.8.0.1
 types-urllib3==1.26.25.14
 typing_extensions==4.7.1
-tzdata==2022.2
-tzlocal==4.2
 urllib3==2.0.4
 uvicorn==0.23.2
 virtualenv==20.24.3
-virtualenv-clone==0.5.7
-waitress==2.1.2
 websockets==11.0.3
-wrapt==1.14.1
