--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ pydantic-settings==2.0.3
 pydantic_core==2.6.0
 pyflakes==3.1.0
 pytest==7.4.0
+pytest-asyncio==0.21.1
 python-dotenv==1.0.0
 python-jose==3.3.0
 PyYAML==6.0.1
