--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "yup": "^1.2.0"
     },
     "devDependencies": {
+        "@types/node": "^20.7.0",
         "@typescript-eslint/eslint-plugin": "^6.5.0",
         "@typescript-eslint/parser": "^6.5.0",
         "concurrently": "^8.2.1",
