--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "@types/node": "^20.7.0",
+        "@types/react-dom": "^18.2.8",
         "@typescript-eslint/eslint-plugin": "^6.5.0",
         "@typescript-eslint/parser": "^6.5.0",
         "concurrently": "^8.2.1",
