--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "dev:server": "python -m uvicorn stripe2qbo.api.app:app --reload",
         "build": "npm run build:styles && npm run build:client",
         "build:styles": "npx tailwindcss -i client/index.css  -o static/index.css",
-        "build:client": "esbuild --define:process.env.HOST=\\\"localhost:8000\\\" ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js"
+        "build:client": "esbuild --define:process.env.HOST=\\\"$HOST\\\" ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js"
     },
     "author": "",
     "license": "ISC",
