--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 alembic==1.12.0
 annotated-types==0.5.0
 anyio==3.7.1
+bcrypt==4.0.1
 black==23.7.0
 certifi==2023.7.22
+cffi==1.16.0
 cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.6
+cryptography==41.0.4
 distlib==0.3.7
 ecdsa==0.18.0
 enum-compat==0.0.3
@@ -30,6 +33,7 @@ mypy-extensions==1.0.0
 nodeenv==1.8.0
 oauthlib==3.2.2
 packaging==23.1
+passlib==1.7.4
 pathspec==0.11.2
 platformdirs==3.10.0
 pluggy==1.3.0
@@ -37,6 +41,7 @@ pre-commit==3.3.3
 psycopg2-binary==2.9.7
 pyasn1==0.5.0
 pycodestyle==2.11.0
+pycparser==2.21
 pydantic==2.2.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.0
@@ -45,6 +50,7 @@ pytest==7.4.0
 pytest-asyncio==0.21.1
 python-dotenv==1.0.0
 python-jose==3.3.0
+python-multipart==0.0.6
 PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
