--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "compilerOptions": {
         "jsx": "react",
         "strict": true,
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "lib": ["dom", "esnext"]
     }
 }
