--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,10 @@ starlette==0.27.0
 stripe==5.5.0
 types-colorama==0.4.15.12
 types-docutils==0.20.0.3
+types-passlib==1.7.7.13
+types-pyasn1==0.4.0.6
 types-Pygments==2.16.0.0
+types-python-jose==3.3.4.8
 types-requests==2.31.0.2
 types-setuptools==68.1.0.1
 types-stripe==3.5.2.14
