--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 alembic==1.12.0
+amqp==5.1.1
 annotated-types==0.5.0
 anyio==3.7.1
 bcrypt==4.0.1
+billiard==4.1.0
 black==23.7.0
+celery==5.3.4
 certifi==2023.7.22
 cffi==1.16.0
 cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.6
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 cryptography==41.0.4
 distlib==0.3.7
 ecdsa==0.18.0
@@ -25,6 +31,7 @@ idna==3.4
 iniconfig==2.0.0
 intuit-oauth==1.2.4
 itsdangerous==2.1.2
+kombu==5.3.2
 Mako==1.2.4
 MarkupSafe==2.1.3
 mccabe==0.7.0
@@ -38,6 +45,7 @@ pathspec==0.11.2
 platformdirs==3.10.0
 pluggy==1.3.0
 pre-commit==3.3.3
+prompt-toolkit==3.0.39
 psycopg2-binary==2.9.7
 pyasn1==0.5.0
 pycodestyle==2.11.0
@@ -48,10 +56,12 @@ pydantic_core==2.6.0
 pyflakes==3.1.0
 pytest==7.4.0
 pytest-asyncio==0.21.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0.1
+redis==5.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -72,7 +82,10 @@ types-stripe==3.5.2.14
 types-ujson==5.8.0.1
 types-urllib3==1.26.25.14
 typing_extensions==4.7.1
+tzdata==2023.3
 urllib3==2.0.4
 uvicorn==0.23.2
+vine==5.0.0
 virtualenv==20.24.3
+wcwidth==0.2.8
 websockets==11.0.3
