--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "concurrently \"npm run dev:styles\" \"npm run dev:client\" \"npm run dev:server\"",
         "dev:styles": "npx tailwindcss -i client/index.css  -o static/index.css --watch",
-        "dev:client": "esbuild --define:process.env.HOST=\\\"localhost:8000\\\" ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js  --watch",
+        "dev:client": "esbuild --define:process.env.HOST=\\\"localhost:8000\\\"  --define:process.env.SSL=false ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js  --watch",
         "dev:server": "python -m uvicorn stripe2qbo.api.app:app --reload",
         "build": "npm run build:styles && npm run build:client",
         "build:styles": "npx tailwindcss -i client/index.css  -o static/index.css",
-        "build:client": "esbuild --define:process.env.HOST=\\\"$HOST\\\" ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js"
+        "build:client": "esbuild --define:process.env.HOST=\\\"$HOST\\\" --define:process.env.SSL=$SSL ./client/index.tsx --bundle --minify --sourcemap --target=es2015 --outfile=static/index.js"
     },
     "author": "",
     "license": "ISC",
